--- a/calculadora.html
+++ b/calculadora.html
@@ -1,4 +1,5 @@
 <html>
+  <link rel="stylesheet" href="estilo.css"
 <head>
 <script>
 function soma(form1)
@@ -6,7 +7,7 @@ function soma(form1)
    a=new Number(form1.t1.value);
    b=new Number(form1.t2.value);
    c=new Number(a+b);
-   alert("A soma dos números é:  "+c);
+   alert("A soma dos nÃºmeros ï¿½:  "+c);
 }
 
 function sub(form1)
@@ -14,7 +15,7 @@ function sub(form1)
    a=new Number(form1.t1.value);
    b=new Number(form1.t2.value);
    c=new Number(a-b);
-   alert("A subtração dos números é:  "+c);
+   alert("A subtraÃ§Ã£o dos nÃºmeros ï¿½:  "+c);
 }
 </script>
 </head>
@@ -22,10 +23,10 @@ function sub(form1)
 <body>
 <center><h1>Calculadora <br><br> </h1>
   <h3>
-Digite um número:
+Digite um nÃºmero:
 <form name="form1">
   <input type="text" name="t1"><br>
-  Digite outro número:<br>
+  Digite outro nÃºmero:<br>
   <input type="text" name="t2"><br><br>
   <input type="button" name="b1" value="+" onClick="soma(form1)">
   <input type="button" name="b2" value="-" onClick="sub(form1)">
